Problemi con home, incompatibilità css, creata home2, creazione cards funzionante, manca rendere che

--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 						</li>
 						<li class="vertical_separator"></li>
 						<li>
-							<button class="profile_btn" type="button" onclick="profile()">
+							<button class="profile_btn" type="button">
 								<div class="usericon">
 									<svg viewBox="0 0 1024 1024" aria-labelledby="mh-usericon-title">
 										<title id="mh-usericon-title">Profil</title>
@@ -148,39 +148,11 @@
 		<div class="hm_gradient-1"></div>
 		<div class="hm_gradient-2"></div>
 		<div class="container hm_cont" id="container_personal_info">
-
-			<span class="home_cards">
-				
-
-			</span>
 		</div>
-		<div style="display: inline;" id="categories">
-
-
-
-
+		<div id="categories" class="container">
+			<!-- class="row"  class="home_cards row"-->
 		</div>
-		<!-- <div class="container">
-			<div class="arrow-scroll-down slide-top">
-				<a href="#last_listen">
-					<svg id="arrow-scroll-down" viewBox="0 0 32 32">
-						<polygon fill="#ffffff"
-							points="15.98 22.43 7.28 13.73 8.7 12.32 15.98 19.6 23.28 12.3 24.7 13.72 15.98 22.43">
-						</polygon>
-						<path fill="#ffffff"
-							d="M16,32A16,16,0,1,1,32,16,16,16,0,0,1,16,32ZM16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Z">
-						</path>
-					</svg>
-				</a>
-			</div>
-		</div> -->
 	</div>
-
-
-
-
-	<!-- <div id="opacity" class="opacity"></div> -->
-
 </body>
 
 </html>
