--- a/home2.html
+++ b/home2.html
@@ -25,6 +25,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 
@@ -79,9 +80,9 @@
         </div>
         <br><br>
         <div>
-            <button type="button" class="btn btn-success" onclick="salvaGeneri()">Success</button>
+            <button type="button" id="btnSend" class="btn btn-success" onclick="salvaGeneri()">Success</button>
             <button type="button" class="btn btn-success">Success</button>
-        </div>    
+        </div>
 
     </div>
 
@@ -97,6 +98,51 @@
 
 
         </div>
+
+
+        <div class="container-fluid">
+
+
+
+            <div class="row">
+
+
+                <div class="col-sm-2" >
+
+                    <div id="AccountSetting" class="list-group">
+                        <button type="button" class="btn btn-success list-group-item list-group-item-action" aria-current="true">
+                            The current button
+                        </button>
+                        <button type="button" class="btn btn-success list-group-item list-group-item-action">A second item</button>
+                        <button type="button" class="btn btn-success list-group-item list-group-item-action">A third button
+                            item</button>
+                        <button type="button" class="btn btn-success list-group-item list-group-item-action">A fourth button
+                            item</button>
+                            <button type="button" class="btn btn-success list-group-item list-group-item-action">A second item</button>
+                            <button type="button" class="btn btn-success list-group-item list-group-item-action">A second item</button>
+                            <button type="button" class="btn btn-success list-group-item list-group-item-action">A second item</button>
+                        
+                    </div>
+
+                </div>
+
+                <div class="col-sm-10" style="background-color: blue;">
+
+
+                </div>
+
+
+
+
+
+            </div>
+
+
+
+
+
+        </div>
+
 
 
     </div>
