--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 				</div>
 				<span>or use your account</span>
-				<input type="email" name="email" placeholder="Email" value="amribader@gmail.com" id="accessoEmail" />
+				<input type="email" name="email" placeholder="Email" value="utente1@gmail.com" id="accessoEmail" />
 				<input type="password" name="password" placeholder="Password" id="accessoPassword" />
 
 				<a href="#">Forgot your password?</a>
