--- a/home2.html
+++ b/home2.html
@@ -11,7 +11,7 @@
     <script defer src="index.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel="stylesheet" href="cardsStyle.css">
+
     <!-- <style>
         .card {
           margin-top: 10px;
@@ -29,6 +29,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="cardsStyle.css">
 
 
 </head>
@@ -118,22 +120,20 @@
                     <div id="AccountSetting" class="list-group">
                         <button type="button" class="btn btn-success list-group-item list-group-item-action"
                             aria-current="true" id="profile" name="profile" onclick="settingProfile()">
-                            Profile
+                            Profile (FATTO)
                         </button>
                         <button type="button" class="btn btn-success list-group-item list-group-item-action"
-                            id="account" name="account" onclick="settingAccount()">Account</button>
-                        <button type="button" class="btn btn-success list-group-item list-group-item-action">A third
-                            button
-                            item</button>
-                        <button type="button" class="btn btn-success list-group-item list-group-item-action">A fourth
-                            button
-                            item</button>
+                            id="account" name="account" onclick="settingAccount()">Account (FATTO)</button>
+                        <button type="button" class="btn btn-success list-group-item list-group-item-action"
+                            onclick="settingPreference()">Preferenze</button>
+                        <button type="button" class="btn btn-success list-group-item list-group-item-action"
+                            onclick="settingPlaylist()">Playlist</button>
+                        <button type="button" class="btn btn-success list-group-item list-group-item-action">Comunità
+                            condivisioni</button>
                         <button type="button" class="btn btn-success list-group-item list-group-item-action">A second
                             item</button>
-                        <button type="button" class="btn btn-success list-group-item list-group-item-action">A second
-                            item</button>
-                        <button type="button" class="btn btn-success list-group-item list-group-item-action">A second
-                            item</button>
+                        <button type="button" class="btn btn-success list-group-item list-group-item-action"
+                            onclick="deleteUser()">cancella utente</button>
 
                     </div>
 
@@ -171,10 +171,12 @@
                     </form>
 
                 </div> -->
+
+                <!-- PRIMO DIV MIO MODIFICA ACCOUNT -->
                 <div id="modifyAccount" class="container col-sm-10">
 
                     <form id="formModifyAccount" action="" method="post">
-<!-- 
+                        <!-- 
                         <div class="mb-3">
                             <label for="username" class="form-label">Username</label>
                             <div class="input-group">
@@ -190,8 +192,7 @@
 
 
 
-                        <!-- <input type="text" class="form-control" aria-label="Text input with checkbox">
-             -->
+                        <!-- <input type="text" class="form-control" aria-label="Text input with checkbox"> -->
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
                             <div class="input-group">
@@ -219,14 +220,14 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="password_conferma class=" form-label">Conferma password</label>
+                            <label for="password_conferma" class="form-label">Conferma password</label>
                             <div class="input-group">
                                 <div class="input-group-text">
-                                    <input class="form-check-input mt-0" type="checkbox" value="password_conferma"
-                                        aria-label="Checkbox for following text input">
+                                    <input disabled class="form-check-input mt-0" type="checkbox"
+                                        value="password_conferma" aria-label="Checkbox for following text input">
                                 </div>
-                                <input type="password" name="password_conferma" id="password_conferma" class="form-control"
-                                    placeholder="New password">
+                                <input disabled type="password" name="password_conferma" id="password_conferma"
+                                    class="form-control" placeholder="New password">
                             </div>
 
                         </div>
@@ -239,50 +240,148 @@
                     </form>
 
                 </div>
+                <!-- FINE DIV MIO MODIFICA ACCOUNT -->
 
-                <div id="modifyProfile" class="col-sm-10" style="background-color: blue;">
+                <!-- INIZIO SECONDO DIV PROFILO -->
+                <div id="modifyProfile" class="col-sm-10">
                     <form action="#" method="post">
-                        <div class="row" >
-                            <h5>cambia nome utente</h5>
-                           <div class="col">
-                            <!-- <label for="profileName" class="form-label"><strong>cambia nome utente</strong></label> -->
-                            <input type="text" name="nomeUtente" id="profileName" placeholder="Nuovo nome utente" 
-                                class="form-control" style="width: 500px;">
-                           </div>
+                        <div class="row" style="margin: 30px 30px 30px 0">
+                            <h5>Cambia nome utente</h5>
                             <div class="col">
-                                <button type="button" class="btn btn-outline-success" id="cambiaNome" >Cambia nome</button>
+                                <!-- <label for="profileName" class="form-label"><strong>cambia nome utente</strong></label> -->
+                                <input type="text" name="nomeUtente" id="profileName" placeholder="Nuovo nome utente"
+                                    class="form-control" style="width: 500px;">
                             </div>
-                            
-                                
+                            <div class="col">
+                                <button type="button" class="btn btn-outline-success" id="cambiaNome">Cambia
+                                    nome</button>
+                            </div>
+
+
                         </div>
 
-                        <div class="row">
+                        <div class="row" style="margin: 30px 30px 30px 0">
                             <h5>Biografia</h5>
-                           <div class="col">
-                            <!-- <label for="profileName" class="form-label"><strong>cambia nome utente</strong></label> -->
-                            <input type="text" name="bio" id="bio" placeholder="inserisci una biografia" 
-                                class="form-control" style="width: 500px;">
-                           </div>
                             <div class="col">
-                                <button type="button" class="btn btn-outline-success" id="cambiaBio" >Cambia biografia</button>
-                            <!-- <label for="bio" class="form-label"><strong>Biografia</strong></label>
+                                <!-- <label for="profileName" class="form-label"><strong>cambia nome utente</strong></label> -->
+                                <input type="text" name="bio" id="bio" placeholder="inserisci una biografia"
+                                    class="form-control" style="width: 500px;">
+                            </div>
+                            <div class="col">
+                                <button type="button" class="btn btn-outline-success" id="cambiaBio">Cambia
+                                    biografia</button>
+                                <!-- <label for="bio" class="form-label"><strong>Biografia</strong></label>
                             <input type="text" name="bio" id="bio" placeholder="inserisci una biografia"
                                 class="form-control" style="width: 500px;"> -->
+                            </div>
                         </div>
-                        <div class="mb-3">
+                        <div class="row" style="margin: 30px 30px 30px 5px" id="immagineProfilo1">
+                            <h5>Immagine del profilo</h5>
+                            <div class="col">
+                                <!-- <label for="profileName" class="form-label"><strong>cambia nome utente</strong></label> -->
+                                <input class="form-control" type="file" id="formFile"
+                                    placeholder="seleziona un'immagine" class="form-control" style="width: 500px;">
+                            </div>
+                            <div class="col">
+                                <button type="button" class="btn btn-outline-success" id="cambiaImg">Cambia
+                                    immagine</button>
+                            </div>
+                            <!-- <div class="mb-3">
                             <label for="formFile" class="form-label"><strong>Immagine del profilo</strong></label>
                             <input class="form-control" type="file" id="formFile" placeholder="selezione un'immagine"
                                 class="form-control">
+                        </div> -->
+
                         </div>
+
+
 
                     </form>
                 </div>
+                <!-- FINE SECONDO DIV PROFILO -->
+
+                <!-- INIZIO DIV PREFERENZE -->
+                <div id="modifyPreference" class="col-sm-10">
+                    <div class="container">
+                        <h5>Per aggiungere delle preferenze clicca qui</h5>
+                        <button type="button" class="btn btn-success" id="btnAddPreference">Preferenze</button>
+                    </div>
+
+                    <div class="container-sm">
+                        <table class="table table-bordered table-hover table-striped table-responsive">
+                            <thead>
+                                <tr class="table-success">
+                                    <th class="th-sm" scope="col">Name</th>
+                                    <th class="th-sm" scope="col">Link</th>
+                                </tr>
+                            </thead>
+                            <tbody id="tablePreference">
+
+
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+                <!-- FINE DIV PREFERENZE -->
+                <!-- INIZIO DIV CANCELLA ACCOUNT -->
+                <div class="col-sm-10" id="cancellaUtente">
+                    <h1 style="color: red"> vuoi davvero elimare il tuo account? </h1>
+                    <div class="col">
+                        <button type="button" class="btn btn-outline-success" id="bottoneCancellaUtente">CANCELLA
+                            UTENTE</button>
+                    </div>
+                </div>
+                <!-- FINE DIV CANCELLA ACCOUNT -->
+
+                <!-- INIZIO DIV MOSTRA PLAYLIST -->
+                <div class="col-sm-10" id="divPlaylist">
+                    <div class="container">
+                        <div class="row cant d-flex justify-content-center align-items-center">
+                            <div class="col-md-6">
+                                <div class="p-3 card">
+                                    <div class="d-flex justify-content-between align-items-center p-3 music">
+                                        <div class="d-flex flex-row align-items-center"> <i
+                                                class="fa fa-music color"></i> <small class="ml-2">Shannon jin pride -
+                                                The Usual [Beat, Jess Scott]</small> </div> <i
+                                            class="fa fa-check color"></i>
+                                    </div>
+                                    <div class="d-flex justify-content-between align-items-center p-3 music">
+                                        <div class="d-flex flex-row align-items-center"> <i
+                                                class="fa fa-music color"></i> <small class="ml-2">R Kelly - Thoia
+                                                Toing</small> </div> <i class="fa fa-plus text-muted"></i>
+                                    </div>
+                                    <div class="d-flex justify-content-between align-items-center p-3 music">
+                                        <div class="d-flex flex-row align-items-center"> <i
+                                                class="fa fa-music color"></i> <small class="ml-2">Under - Yeah [Feat
+                                                Lil John & Lutaring] </small> </div> <i class="fa fa-check color"></i>
+                                    </div>
+                                    <div class="d-flex justify-content-between align-items-center p-3 music">
+                                        <div class="d-flex flex-row align-items-center"> <i
+                                                class="fa fa-music color"></i> <small class="ml-2">Dua Lipa - Thingong
+                                                Huango [Beat, Jess Scott]</small> </div> <i
+                                            class="fa fa-plus text-muted"></i>
+                                    </div>
+                                    <div class="d-flex justify-content-between align-items-center p-3 music">
+                                        <div class="d-flex flex-row align-items-center"> <i
+                                                class="fa fa-music color"></i> <small class="ml-2">Things are better -
+                                                The Usual [Beat, Jess Scott]</small> </div> <i
+                                            class="fa fa-check color"></i>
+                                    </div> <button class="btn btn-danger btn-block playlist text-uppercase"
+                                        id="btnCreaPlaylist"><i class="fa fa-shopping-cart"></i> Crea nuova
+                                        playlist</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <h1 style="color: red"> Playlist</h1> -->
+                </div>
+                <!-- FINE DIV  MOSTRA PLAYLIST -->
 
 
 
 
-
-            </div>
+            </div> <!-- FINE DIV COINTAINER "ROW" -->
 
 
 
@@ -290,7 +389,26 @@
 
         </div>
 
-
+        <!-- INIZIO DIV CREA PLAYLIST -->
+        <div class="container-fluid" id="CreaPlaylist" style="background-color:powderblue;">
+            <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3 form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+        </div>
+        <!-- FINE DIV CREA PLAYLIST -->
 
     </div>
     <!-- 
