Fine eliminazione PL, inixio mostra PL ed modifica

--- a/home2 copy.html
+++ b/home2 copy.html
@@ -424,9 +424,10 @@
         <!-- INIZIO DIV MOSTRA MY PLAYLIST -->
         <div class="container-fluid" id="MyPlaylist">
             <div class="container-sm">
-                <table class="table table-responsive">
+                <table class="table table-condensed table-responsive">
                     <thead>
                         <tr class="table">
+                            <th scope="col">#</th>
                             <th class="th-sm" scope="col"><strong>Name</strong></th>
                             <th class="th-sm" scope="col"><strong>Description</strong></th>
                             <th class="th-sm" scope="col"><strong>Collaborative</strong></th>
@@ -435,8 +436,6 @@
                         </tr>
                     </thead>
                     <tbody id="tableMyPlaylist">
-
-
                     </tbody>
                 </table>
             </div>
