--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 		<!-- FORM PER LA LOGIN -->
 		<div class="form-container sign-in-container">
-			<form id="formLogin" method="post" action="home2.html" name="formLogin">
+			<form id="formLogin" method="post" action="home.html" name="formLogin">
 				<h1>Accedi al tuo account</h1>
 				<div class="social-container">
 					<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
