conclusione PL, inizio gestione community

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <body>
 
 
-	<h2>Weekly Coding Challenge #1: Sign in/up Form</h2>
 
 
 	<div class="alert alert-danger" role="alert" id="reg_alert"></div>
@@ -53,10 +52,10 @@
 					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 				</div>
 				<span>or use your account</span>
-				<input type="email" name="email" placeholder="Email" value="utente1@gmail.com" id="accessoEmail" />
+				<input type="email" name="email" placeholder="Email"  id="accessoEmail" />
 				<input type="password" name="password" placeholder="Password" id="accessoPassword" />
 
-				<a href="#">Forgot your password?</a>
+				 <a href="#" >Forgot your password? </a> 
 				<button type="submit">Accedi</button>
 			</form>
 		</div>
@@ -65,7 +64,7 @@
 		<div class="overlay-container">
 			<div class="overlay">
 				<div class="overlay-panel overlay-left">
-					<h1>Ben Tornato!</h1>
+					<h1>Welcome back!</h1>
 					<p>To keep connected with us please login with your personal info</p>
 					<button class="ghost" id="signIn">Accedi</button>
 				</div>
