--- a/home.html
+++ b/home.html
@@ -533,6 +533,58 @@
                     </div>
                 </div>
                 <!-- FINE DIV COMUNITà -->
+                <!-- INIZIO DIV all COMUNITà -->
+                <div class="container-fluid" id="MyAllCommunity">
+                    <div class="container-sm">
+                        
+                        <table class="table table-condensed table-responsive">
+                            <thead>
+                                <tr class="table">
+                                    <th class="th-sm" scope="col"><strong>Name</strong></th>
+                                    <th class="th-sm" scope="col"><strong>Owner</strong></th>
+                                    <th class="th-sm" scope="col"><strong>Members</strong></th>
+                                </tr>
+                            </thead>
+                            <tbody id="tableMyAllCommunity">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- FINE DIV all COMUNITà -->
+
+
+                <!-- INIZIO DIV PL COMUNITà -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <table class="table table-condensed table-responsive">
+                                                      <thead>
+                                                          <tr class="table">
+                                                              <th class="th-sm" scope="col">#</th>
+                                                              <th class="th-sm" scope="col"><strong>Name</strong></th>
+                                                              <th class="th-sm" scope="col"><strong>Description</strong></th>
+                                                              <th class="th-sm" scope="col"><strong>TAG</strong></th>
+                                                              <th class="th-sm" scope="col"><strong>Delete</strong></th>
+                                                              <th class="th-sm" scope="col"><strong>DURATION</strong></th>
+                                                          </tr>
+                                                      </thead>
+                                                      <tbody id="tableCommunityPlaylist">
+                                                      </tbody>
+                                                  </table>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-primary">Send message</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                <!-- FINE DIV PL COMUNITà -->
 
             </div> <!-- FINE DIV COINTAINER "ROW" -->
 
