--- a/home.html
+++ b/home.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+    <link rel="icon" href="https://www.scdn.co/i/_global/favicon.png" />
+	
     <title>home 2</title>
     <script defer src="index.js"></script>
 
@@ -35,7 +36,7 @@
 
 </head>
 
-<body onload="customizePage()">
+<body>
     <!-- onload="getToken(), getCategories(), customizePage()"  NON SONO SICURO CHE SIA LA SCELTA MIGLIORE -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
@@ -87,8 +88,8 @@
         </div>
         <br><br>
         <div>
-            <button type="button" id="btnSend" class="btn btn-success" onclick="salvaGeneri()">Success</button>
-            <button type="button" class="btn btn-success">Success</button>
+            <button type="button" id="btnSend" class="btn btn-success" onclick="salvaGeneri()">SALVA</button>
+          <!--   <button type="button" class="btn btn-success">Success</button> -->
         </div>
 
     </div>
@@ -113,7 +114,7 @@
 
 
 
-            <div class="row">
+            <div class="row" id="rowSetting">
 
 
                 <div class="col-sm-2">
@@ -121,10 +122,10 @@
                     <div id="AccountSetting" class="list-group">
                         <button type="button" class="btn btn-success list-group-item list-group-item-action"
                             aria-current="true" id="profile" name="profile" onclick="settingProfile()">
-                            Profile (FATTO)
+                            Profile 
                         </button>
                         <button type="button" class="btn btn-success list-group-item list-group-item-action"
-                            id="account" name="account" onclick="settingAccount()">Account (FATTO)</button>
+                            id="account" name="account" onclick="settingAccount()">Account </button>
                         <button type="button" class="btn btn-success list-group-item list-group-item-action"
                             onclick="settingPreference()">Preferenze</button>
                         <div class="dropdown">
@@ -465,7 +466,6 @@
                                             <th class="th-sm" scope="col"><strong>Description</strong></th>
                                             <th class="th-sm" scope="col"><strong>TAG</strong></th>
                                             <th class="th-sm" scope="col"><strong>Delete</strong></th>
-                                            <th class="th-sm" scope="col"><strong>DURATION</strong></th>
                                         </tr>
                                     </thead>
                                     <tbody id="tablePublicPlaylist">
@@ -553,8 +553,8 @@
                 <!-- FINE DIV all COMUNITà -->
 
 
-                <!-- INIZIO DIV PL COMUNITà -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <!-- INIZIO DIV PL COMUNITà -->    <!-- VIENE SPOSTATO IN JS PER PROBLEMI CON LA GESTIONE DEI VARI ID -->
+                <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                       <div class="modal-content">
                         <div class="modal-header">
@@ -562,7 +562,7 @@
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                          <table class="table table-condensed table-responsive">
+                          <table class="table table-condensed table-responsive" id="tableCommunityPL">
                                                       <thead>
                                                           <tr class="table">
                                                               <th class="th-sm" scope="col">#</th>
@@ -573,8 +573,7 @@
                                                               <th class="th-sm" scope="col"><strong>DURATION</strong></th>
                                                           </tr>
                                                       </thead>
-                                                      <tbody id="tableCommunityPlaylist">
-                                                      </tbody>
+                                                      
                                                   </table>
                         </div>
                         <div class="modal-footer">
@@ -583,7 +582,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                 <!-- FINE DIV PL COMUNITà -->
 
             </div> <!-- FINE DIV COINTAINER "ROW" -->
