--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
 		<!-- FORM PER LA LOGIN -->
 		<div class="form-container sign-in-container">
 			<form id="formLogin" method="post" action="home.html" name="formLogin">
-				<h1>Accedi al tuo account</h1>
+				<h1>Login to your account</h1>
 				<div class="social-container">
 					<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
 					<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
 					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 				</div>
 				<span>or use your account</span>
-				<input type="email" name="email" placeholder="Email"  id="accessoEmail" />
-				<input type="password" name="password" placeholder="Password" id="accessoPassword" />
+				<input type="email" name="email" placeholder="Email" required id="accessoEmail" />
+				<input type="password" name="password" placeholder="Password" required id="accessoPassword" />
 
-				 <a href="#" >Forgot your password? </a> 
+				 <a href="#" disabled >Forgot your password? </a> 
 				<button type="submit">Accedi</button>
 			</form>
 		</div>
